--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ create-issue/create-issue
 find-issue/find-issue
 close-issue/close-issue
 comment-issue/comment-issue
+get-latest-semver-tag/get-latest-semver-tag
+get-next-semver/get-next-semver
 
 # IDE files
 .vscode/
