--- a/close-issue/action.yml
+++ b/close-issue/action.yml
@@ -26,6 +26,8 @@ runs:
         INPUT_STATE_REASON: ${{ inputs.state-reason }}
         INPUT_GITHUB_TOKEN: ${{ inputs.github-token }}
       run: |
+        ORIGINAL_DIR=$(pwd)
         cd ${{ github.action_path }}
         go build -o close-issue main.go
-        ./close-issue
+        cd "$ORIGINAL_DIR"
+        ${{ github.action_path }}/close-issue
