--- a/comment-issue/action.yml
+++ b/comment-issue/action.yml
@@ -23,6 +23,8 @@ runs:
         INPUT_COMMENT_BODY: ${{ inputs.comment-body }}
         INPUT_GITHUB_TOKEN: ${{ inputs.github-token }}
       run: |
+        ORIGINAL_DIR=$(pwd)
         cd ${{ github.action_path }}
         go build -o comment-issue main.go
-        ./comment-issue
+        cd "$ORIGINAL_DIR"
+        ${{ github.action_path }}/comment-issue
